<resources>
    <string name="app_name">USA Cycling</string>
    <string name="notification_ticker">Collecting data in background</string>
    <string name="notification_context_text">Running</string>
    <string name="service_disabled">DISABLED</string>
    <string name="service_status">Service Status:</string>
    <string name="device_status">Device Status:</string>
    <string name="device_type">Device Type:</string>
    <string name="device_name">Device Name:</string>
    <string name="device_connection">Device connection:</string>
    <string name="device_number">Device Number:</string>
    <string name="connected_to_iot_status">IOT connection status:</string>
    <string name="not_connected">NOT_CONNECTED</string>
    <string name="title_activity_exception">Unhandled Exception</string>
    <string name="searching">Searching for devices …</string>
    <string name="my_devices">My devices</string>
    <string name="wait_msg">Please wait …</string>
    <string name="connecting_to_iot_msg">Connecting to IOT</string>
    <string name="exit_label">EXIT</string>

    /* menu items */
    <string name="action_scan_for_devices">Scan for devices</string>
    <string name="action_statistics">Show statistics</string>
    <string name="action_configure_bpm">Set BPM power</string>
    <string name="action_refresh">refresh</string>
    <string name="action_fav_devices">show favourite devices</string>
    <string name="action_add_fav">Add to my devices</string>
    <string name="action_remove_fav">Remove from my devices</string>
    <string name="action_rename_fav">Rename device</string>
    <string name="title_activity_device_scan">New scan</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_disconnect_device">Disconnect</string>
    <string name="rename_device">Rename device</string>
    <string name="input_name">Please, input new name</string>
    <string name="label_total_messages">Total messages count</string>
    <string name="label_data_messages_count">Data messages count</string>
    <string name="label_status_messages_lost">Status messages lost</string>
    <string name="label_data_messages_lost">Data messages lost</string>
    <string name="label_total_messages_lost">Total messages lost</string>
    <string name="label_status_messages_received">Status messages delivered</string>
    <string name="label_data_messages_received">Data messages delivered</string>
    <string name="label_total_messages_received">Total messages delivered</string>
    <string name="label_status_messages_count">Status messeges count</string>
    <string name="title_activity_configure_bpm">ConfigureBPMActivity</string>
    <string name="title_activity_io_tbasic_connection_set">IoT connection settings</string>
    <string name="define_iot_credentials_info">Select device ID</string>
    <string name="action_configure_iot">MQTT settings</string>
    <string name="action_configure_power_meters">Power meters settings</string>
    <string name="action_save">SAVE</string>
    <string name="label_exit_settings">EXIT SETTINGS</string>
    <string name="label_custom_credentials">Custom credentials</string>
    <string name="label_input_id">Input ID</string>
    <string name="label_input_token">Input token</string>
    <string name="data_message_qos_label">Data message QoS</string>
    <string name="status_message_qos_label">Status message QoS</string>
    <string name="title_activity_bpm_parameters">Power meter settings</string>
    <string name="bullet_one_content">Make sure that all power meters are paired and running</string>
    <string name="bullet_two_content">Rotate the power meters at least one revolution to ensure they are awake and ready to communicate</string>
    <string name="bullet_three_content">For successfully setting the zero-offset, it is recommended
    that the left crank arm with power meter is positioned straight down (6 o’clock
    position), with no load applied to the pedal, and the bike in a stable position</string>

    <string name="bullet_four_content">The power meter\'s slope can be found on the lid on the back of the power meter (e.g. 24.5 Hz/Nm).
        It is recommended setting it as well on every power meter, but not obligatory</string>

    <string name="bullet_five_content">You are now ready to set the zero-offset of the power meters by pressing the \'ENABLE AUTO-ZERO\' button</string>
    <string name="btn_set_slope_label">Set CTF Slope</string>
    <string name="btn_manual_calibration">Request Manual Calibration</string>
    <string name="set_slopes_dialog_title">Set power meters slopes</string>
    <string name="not_provided_slope_hint"><i>Not provided</i></string>
    <string name="last_known_calibration_msgs_label">Last known calibration messages for running power meters</string>
</resources>
