<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_scan_for_devices" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_statistics" />
    <item
        android:id="@+id/action_configure_bpm"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_configure_bpm" />
    <item
        android:id="@+id/action_configure_iot"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_configure_iot" />
    <item
        android:id="@+id/action_configure_power_meters"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_configure_power_meters" />

</menu>
