<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mqtt_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/connected_to_iot_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/iotConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_connected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_userDeviceViewPref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/my_devices"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_searching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/searching"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listView"
        android:choiceMode="singleChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants" />
</LinearLayout>
