<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cit.usacycling.ant.ui.BpmParametersActivity">

    <Button
        android:id="@+id/btnSetSlope"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_set_slope_label" />

    <Button
        android:id="@+id/btnManualCalibration"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_manual_calibration" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/last_known_calibration_msgs_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fadeScrollbars="false">

        <LinearLayout
            android:id="@+id/messagesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</LinearLayout>
