<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.cit.usacycling.ant.ui.IoTBasicConnectionSetActivity">


            <TextView
                android:id="@+id/tvIoTCredentialsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/define_iot_credentials_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvIoTCredentialsInfo"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/tvDataMsgQoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:gravity="center"
                android:text="@string/data_message_qos_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/rgDataQoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDataMsgQoS"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rbQoS0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="0" />

                <RadioButton
                    android:id="@+id/rbQoS1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/rbQoS2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="2" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvStatusMsgQoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rgDataQoS"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/status_message_qos_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/rgStatusQoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvStatusMsgQoS"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rbSQoS0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="0" />

                <RadioButton
                    android:id="@+id/rbSQoS1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/rbSQoS2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="2" />
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/noDeviceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No devices"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/tryAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:text="Try extracting again"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:text="@string/label_exit_settings" />
</LinearLayout>


